--- a/css/response_m.css
+++ b/css/response_m.css
@@ -10,7 +10,7 @@ header h1 {
     margin-bottom: 25px;
 }
 header .btn_mobile {
-    top: 26px; right: 10px;
+    top: 32px; right: 15px;
     display: block;
 }
 
@@ -53,6 +53,30 @@ header nav .gnb li + li {
 #cont_wrap {
     max-width: 94%;
     margin: 0 auto 40px;
+}
+#cont_wrap h2 {
+    font-size: 22px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    padding: 0 25px;
+    margin-bottom: 50px;
+}
+#cont_wrap h2::before {
+    top: 0; left: 0;
+    font-size: 60px;
+    font-weight: 400;
+}
+#cont_wrap h2::after {
+    top: 0; right: 0;
+    font-size: 60px;
+    font-weight: 400;
+}
+#cont_wrap div {
+    margin-bottom: 40px;
+}
+#cont_wrap h2 > span {
+    display: block;
 }
 .cont_top {
     flex-wrap: wrap;
