--- a/css/response_web.css
+++ b/css/response_web.css
@@ -1,17 +1,22 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Peralta&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bevan:ital@0;1&display=swap');
 
 .inner {
     position: relative;
     max-width: 1440px;
     margin: 0 auto;
 }
+figure {
+    border-radius: 20px;
+    overflow: hidden;
+}
 /* header */
 header {
     padding: 20px 0 0;
 }
 header h1 {
-    font-family: "Peralta", serif;
+    font-family: "Bevan", serif;
     font-size: 40px;
     color: #fd510d;
     text-align: center;
@@ -27,8 +32,9 @@ header .btn_mobile {
 header .btn_mobile span {
     position: absolute;
     top: 0; right: 0;
-    width: 36px; height: 3px;
-    background: #222;
+    width: 32px; height: 3px;
+    background: #2b0c00bb;
+    border-radius: 5px;
 }
 header .btn_mobile span:nth-child(2) {
     top: 10px;
@@ -45,13 +51,14 @@ header .btn_mobile span:nth-child(3) {
     display: block;
     padding: 10px;
     text-align: center;
-    font-size: 18px;
+    font-size: 20px;
+    font-weight: 700;
     color: #000;
     border-radius: 8px 8px 0 0;
     transition: all 0.3s;
 }
 .gnb li > a:hover {
-    background: #0976b6;
+    background: #ff7213;
     color: #fff;
 }
 
@@ -64,7 +71,7 @@ header .btn_mobile span:nth-child(3) {
     background: 
     linear-gradient(45deg, rgba(255, 142, 12, 0.5), rgba(255,255,255,0)),
     url(../img/img_bg01.png) no-repeat center/cover;
-    border: 4px solid #fd510d;
+    border: 4px solid #ff7213;
     border-width: 4px 0;
     margin-bottom: 80px;
 }
@@ -88,10 +95,27 @@ header .btn_mobile span:nth-child(3) {
 
 /* cont_wrap */
 #cont_wrap h2 {
+    position: relative;
     font-size: 24px;
-    font-weight: 500;
+    font-weight: 700;
     color: #000;
-    margin-bottom: 25px;
+    margin-bottom: 35px;
+    padding-left: 30px;
+}
+#cont_wrap h2::before {
+    content: '[';
+    position: absolute;
+    top: -11px; left: 0;
+    color: #ff7213;
+    font-size: 40px;
+}
+#cont_wrap h2::after {
+    content: ']';
+    position: absolute;
+    top: -11px;
+    color: #ff7213;
+    font-size: 40px;
+    margin-left: 14px;
 }
 #cont_wrap img {
     max-width: 100%;
@@ -105,19 +129,19 @@ header .btn_mobile span:nth-child(3) {
 #cont_wrap .cont_top {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
 }
 .cont_top .intro {width: 35%}
-.cont_top .hot_place {width: 32%}
+.cont_top .hot_place {width: 35%}
 .cont_top .hot_place figure {margin-bottom: 15px;}
 .cont_top .hot_place .text_area strong {
     display: block;
-    color: brown;
-    font-size: 18px;
-    font-weight: 500;
+    color: rgb(189, 53, 0);
+    font-size: 20px;
+    font-weight: 700;
     margin-bottom: 10px;
 }
-.cont_top aside {width: 25%}
+.cont_top aside {width: 20%}
 .cont_top aside figure {
     height: 260px;
     background: url(../img/img_bg02.png) no-repeat center/cover;
@@ -131,7 +155,7 @@ header .btn_mobile span:nth-child(3) {
 }
 
 #cont_wrap .cont_bottom {
-    margin-bottom: 30px;
+    margin-bottom: 80px;
 }
 .cont_bottom .event_area {
     display: flex;
@@ -144,12 +168,12 @@ header .btn_mobile span:nth-child(3) {
     display: inline-block;
     padding: 12px;
     color: #fff;
-    background: seagreen;
+    background: rgba(255, 99, 52, 0.795);
     border-radius: 3px;
 }
 .cont_bottom .event_area > div .desc {
-    border-left: 4px solid #fd510d;
-    background: rgba(253, 81, 13, 0.15);
+    border-left: 4px solid rgba(255, 99, 52, 0.795);
+    background: rgba(226, 154, 0, 0.15);
     padding: 20px;
     box-sizing: border-box;
     line-height: 1.5;
@@ -161,4 +185,14 @@ footer {
     text-align: center;
     color: rgba(255,255,255,0.6);
     background: rgba(0,0,0,0.8);
+}
+
+@media screen and (max-width: 768px) {
+    #visual_area .title_area {width: 90%}
+    .title_area .title {
+        font-size: 40px;
+        font-weight: 700;
+    }
+    
+
 }
